--- a/TASK_5/index.html
+++ b/TASK_5/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Task List with Checkboxes</title>
+  <title>Task List Pro</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
