--- a/FINAL_TASK/index.html
+++ b/FINAL_TASK/index.html
@@ -7,37 +7,53 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="bg-gradient-to-b from-blue-100 to-blue-400 min-h-screen flex items-center justify-center p-4">
-    <div class="bg-yellow-200 rounded-2xl shadow-lg w-full max-w-md p-6 space-y-4">
-    <h1 class="text-2xl font-semibold text-center">📝 TO-DO</h1>
+<body class="bg-gradient-to-b from-blue-400 to-violet-600 min-h-screen flex items-center justify-center p-4">
+    <div class="bg-gradient-to-b from-yellow-200 to-yellow-500 rounded-2xl shadow-lg w-full max-w-md p-6 space-y-4">
+      <div class="flex justify-center items-center space-x-2">
+        <span class="text-2xl">📝</span>
+        <h1 class="text-2xl font-bold bg-gradient-to-br from-stone-600 to-stone-800 text-transparent bg-clip-text">
+          TO-DO
+        </h1>
+      </div>      
 
     <div class="flex gap-2">
-      <input id="taskInput" type="text" placeholder="Enter a task"
-             class="flex-1 p-2 border rounded-lg focus:outline-none focus:ring focus:border-blue-300"/>
-      <button onclick="addTask()" class="bg-blue-500 text-white shadow-md px-4 py-2 rounded-lg hover:bg-blue-600">
+      <input id="taskInput" type="text" placeholder="Enter a task" autocomplete="off"
+             class="bg-yellow-50 flex-1 p-2 border rounded-lg focus:outline-none focus:ring focus:border-blue-300"/>
+      <button onclick="addTask()" class="bg-blue-500 text-white shadow-md px-4 py-2 rounded-lg hover:bg-blue-600 hover:scale-105 active:bg-blue-200 transition duration-300 ease-in-out">
         Add
       </button>
     </div>
 
     <div class="flex justify-between items-center text-sm flex-wrap gap-2">
       <div class="space-x-1">
-        <button onclick="setFilter('all')" id="filter-all" class="px-2 py-1 rounded hover:bg-blue-100">All</button>
-        <button onclick="setFilter('completed')" id="filter-completed" class="px-2 py-1 rounded hover:bg-blue-100">Completed</button>
-        <button onclick="setFilter('pending')" id="filter-pending" class="px-2 py-1 rounded hover:bg-blue-100">Pending</button>
+        <button onclick="setFilter('all')" id="filter-all" class="px-2 py-1 rounded hover:bg-blue-100 transition duration-300 ease-in-out">All</button>
+        <button onclick="setFilter('completed')" id="filter-completed" class="px-2 py-1 rounded hover:bg-blue-100 transition-transform duration-300 ease-in-out">Completed</button>
+        <button onclick="setFilter('pending')" id="filter-pending" class="px-2 py-1 rounded hover:bg-blue-100 transition duration-300 ease-in-out">Pending</button>
       </div>
-      <button onclick="clearCompleted()" class="text-red-500 font-extrabold hover:underline">
-        Clear Completed
-      </button>
+      <button 
+      onclick="clearCompleted()" 
+      class="text-red-500 font-extrabold px-3 py-1 
+             border-2 border-transparent rounded-full 
+             transition duration-500 ease-in-out 
+             hover:underline hover:scale-110 
+             hover:border-2 hover:border-red-800 hover:rounded-full">
+      Clear Completed
+    </button>    
     </div>
 
     <ul id="taskList" class="space-y-2"></ul>
   </div>
 
+    <span class="absolute bottom-2 right-2 text-sm font-semibold text-black-900">
+      *Better Viewed on Desktop*
+    </span>
+
+
   <!-- Modal -->
   <div id="modal" class="fixed inset-0 hidden bg-black/50 flex items-center justify-center z-50">
-    <div class="bg-white p-6 rounded-lg w-full max-w-sm">
+    <div class="bg-gradient-to-b from-yellow-100 to-yellow-200 p-6 rounded-lg w-full max-w-sm">
       <h2 class="text-xl font-semibold mb-4">Edit Task</h2>
-      <input type="text" id="editInput" class="w-full p-2 border rounded mb-4" />
+      <input type="text" id="editInput" autocomplete="off" class="bg-yellow-50 w-full p-2 border rounded-lg mb-4 focus:outline-none focus:ring focus:border-blue-300" />
       <div class="flex justify-end gap-2">
         <button onclick="closeModal()" class="px-4 py-2 rounded bg-gray-300 hover:bg-gray-400">Cancel</button>
         <button onclick="saveEdit()" class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600">Save</button>
